<!-- SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG -->
<!-- SPDX-License-Identifier: MIT -->

<resources>

    <string name="splashscreen_contentdescription">Infineon example app</string>

    <!--NBT Pass-Through -->
    <!-- Titles -->
    <string name="app_title">NBT Pass-Through</string>
    <string name="app_subtitle">OPTIGA&#8482;\u00A0Authenticate\u00A0NBT</string>
    <string name="app_label">NBT PT</string>
    <!-- Notifications -->
    <!-- App specific strings -->
    <string name="string_write_tap">Please tap your mobile phone to the OPTIGA&#8482;\u00A0Authenticate\u00A0NBT to configure the LED status\n</string>

    <string name="string_state_on">Enable LED\n</string>
    <string name="string_state_off">Disable LED\n</string>

    <string name="string_error">An error occurred, please retry!\n</string>
    <string name="string_led_set">LED state set</string>

    <string name="scan_info">Please make sure to give the app essential location permissions</string>
    <string name="write_desc">Writing to tag icon</string>
    <string name="phone_desc">Phone icon</string>
    <string name="tag_desc">Tag icon</string>

</resources>
